--- a/style.css
+++ b/style.css
@@ -38,25 +38,28 @@ header h1 {
 
     /*Título*/
 main{
+    padding-top: 30px;
     text-align: center;
+    
 
 }
-#tudo{
-    max-width: 1000px;
+.local{
+    max-width: 600px;
     display: inline-block;
     border: 2px solid var(--cor04);
     margin-top: 50px;
     text-align: left;
-    min-width: 100px;
     width: 100%;
-    display: inline-block;
+    height: 600px;
 
 
 }
 
+
+
 .titulo h1 {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 30px 70px;
+    margin: 30px 50px;
 }
 
     /*Contas*/
@@ -64,13 +67,13 @@ main{
 .contas{
     margin-bottom: 80px;
     text-align:left;
-    display: inline-block;
+  
  
 
 }
 
 .contas div{
-    display: block   ;
+    
     padding-left: 50px;
     margin: auto;
     
