--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
 header{
     line-height: 10px;
     width: 100%;
-    height: 30px;
+    max-height: 50px;
     background-color: var(--cor01);
     color: white;
     padding: 20px 0 ;
